// SPDX-FileCopyrightText: (C) 2023 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resource.v2;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

// Provides API to manage a pod workload such as deleting a pod.
service PodService {
  // Deletes the pod for an application in a cluster.
  rpc DeletePod(DeletePodRequest) returns (DeletePodResponse) {
    option (google.api.http) = {put: "/resource.orchestrator.apis/v2/workloads/pods/{cluster_id}/{namespace}/{pod_name}/delete"};
  }
}

// Request message for DeletePod method
message DeletePodRequest {
  // Cluster ID
  string cluster_id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 40
      pattern: "^[a-z0-9][a-z0-9-]{0,38}[a-z0-9]{0,1}$"
    }
  ];
  // Namespace that the pod is running on.
  string namespace = 2 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 253
      pattern: "^[a-z0-9]([-a-z0-9-]*[a-z0-9])?$"
    }
  ];
  // Name of the pod.
  string pod_name = 3 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 253
      pattern: "^[a-z0-9]([-a-z0-9-]*[a-z0-9])?$"
    }
  ];
}

// Response message for the DeletePod method.
message DeletePodResponse {}
